[project]
name = "circuit-puzzles"
version = "2.0.7"
puzzle_checksum = "d7c22670404c51061761946c8e044c2be8028f524957b395dfa62d812ab5aa4a"
description = "Puzzles powering Circuit Protocol - a decentralized stablecoin and lending system on the Chia blockchain that enables permissionless borrowing of BYC against XCH collateral"
authors = [
    {name = "Sebastjan Trepca", email = "set@circuitdao.com"},
    {name = "Nic Niedermowwe", email = "nin@circuitdao.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.poetry]
packages = [{include = "circuit_puzzles"}]
exclude = [
    "circuit_puzzles/**/*.clsp",
    "circuit_puzzles/**/*.clib",
    "audits/**/*"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
chialisp = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"