[project]
name = "circuit-puzzles"
version = "2.1.0"
puzzle_checksum = "aea0b3c8b61e3cd52af175b52fd52382fcd2fef6181900ec572f6ad1c2615bcb"
description = "Puzzles powering Circuit Protocol - a decentralized stablecoin and lending system on the Chia blockchain that enables permissionless borrowing of BYC against XCH collateral"
authors = [
    {name = "Sebastjan Trepca", email = "set@circuitdao.com"},
    {name = "Nic Niedermowwe", email = "nin@circuitdao.com"}
]
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.poetry]
packages = [{include = "circuit_puzzles"}]
exclude = [
    "circuit_puzzles/**/*.clsp",
    "circuit_puzzles/**/*.clib",
    "audits/**/*"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
chialisp = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"